@@ -1,5 +1,6 @@
 -- version 1.1.2 (16/9/2004) --
 1. Changed the cookie names to avoid conflicts with Squirrelmail.
+2. Changed default charset to ISO-8859-1.
 
 -- version 1.1.1a (15/9/2004) --
 1. Fixed a bug in the sorting of the alternate themes. Hey, it was bugging me. :)
